// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card generation model creation addLabelsForProperties 1`] = `
[
  {
    "UOM": "",
    "isDate": false,
    "label": "My Entity",
    "labelWithValue": "My Entity (c8a34397-297e-44bb-a6b5-fffb41f78453)",
    "name": "ID",
    "type": "Edm.Guid",
    "value": "c8a34397-297e-44bb-a6b5-fffb41f78453",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "My RootElement",
    "labelWithValue": "My RootElement (Root 1)",
    "name": "EntityLabel",
    "type": "Edm.String",
    "value": "Root 1",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "A text",
    "labelWithValue": "A text (Sample Text 1)",
    "name": "targetText",
    "type": "Edm.String",
    "value": "Sample Text 1",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "Only Text",
    "labelWithValue": "Only Text (Sample Text 1)",
    "name": "textOnly",
    "type": "Edm.String",
    "value": "Sample Text 1",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "Text First",
    "labelWithValue": "Text First (Sample Text 1)",
    "name": "textFirst",
    "type": "Edm.String",
    "value": "Sample Text 1",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "textLast",
    "labelWithValue": "textLast (Sample Text 1)",
    "name": "textLast",
    "type": "Edm.String",
    "value": "Sample Text 1",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "textSeparate",
    "labelWithValue": "textSeparate (Sample Text 1)",
    "name": "textSeparate",
    "type": "Edm.String",
    "value": "Sample Text 1",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "Date",
    "labelWithValue": "Date (May 30, 2023)",
    "name": "date",
    "type": "Edm.Date",
    "value": "2023-05-30",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "Date And Time",
    "labelWithValue": "Date And Time (<empty>)",
    "name": "dateTime",
    "type": "Edm.DateTimeOffset",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "imageUrl",
    "labelWithValue": "imageUrl (https://example.com/image1.jpg)",
    "name": "imageUrl",
    "type": "Edm.String",
    "value": "https://example.com/image1.jpg",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "Price",
    "labelWithValue": "Price (100)",
    "name": "amountWithCurrency",
    "type": "Edm.Int64",
    "value": 100,
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "Amount",
    "labelWithValue": "Amount (50)",
    "name": "amountWithUnit",
    "type": "Edm.Int64",
    "value": 50,
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "currency",
    "labelWithValue": "currency (USD)",
    "name": "currency",
    "type": "Edm.String",
    "value": "USD",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "unit",
    "labelWithValue": "unit (kg)",
    "name": "unit",
    "type": "Edm.String",
    "value": "kg",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "referencedTestEntities_ID",
    "labelWithValue": "referencedTestEntities_ID ()",
    "name": "referencedTestEntities_ID",
    "type": "Edm.Guid",
    "value": "",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "statusCriticality",
    "labelWithValue": "statusCriticality (3)",
    "name": "statusCriticality",
    "type": "Edm.Int32",
    "value": 3,
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "Status",
    "labelWithValue": "Status (Critical)",
    "name": "justCritical",
    "type": "Edm.String",
    "value": "Critical",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "onlyIcon",
    "labelWithValue": "onlyIcon (Icon1)",
    "name": "onlyIcon",
    "type": "Edm.String",
    "value": "Icon1",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "withIcon",
    "labelWithValue": "withIcon (Icon2)",
    "name": "withIcon",
    "type": "Edm.String",
    "value": "Icon2",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "withoutIcon",
    "labelWithValue": "withoutIcon (No Icon)",
    "name": "withoutIcon",
    "type": "Edm.String",
    "value": "No Icon",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "Terms of Payment",
    "labelWithValue": "Terms of Payment (0001)",
    "name": "RootPaymentTerms",
    "type": "Edm.String",
    "value": "0001",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "Net Value (With Semantic Object)",
    "labelWithValue": "Net Value (With Semantic Object) (11.00 EUR)",
    "name": "NetAmountSemanticObject",
    "type": "Edm.String",
    "value": "11.00 EUR",
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "IsActiveEntity",
    "labelWithValue": "IsActiveEntity (Yes)",
    "name": "IsActiveEntity",
    "type": "Edm.Boolean",
    "value": true,
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "HasActiveEntity",
    "labelWithValue": "HasActiveEntity (Yes)",
    "name": "HasActiveEntity",
    "type": "Edm.Boolean",
    "value": true,
  },
  {
    "UOM": "",
    "isDate": false,
    "label": "HasDraftEntity",
    "labelWithValue": "HasDraftEntity (No)",
    "name": "HasDraftEntity",
    "type": "Edm.Boolean",
    "value": false,
  },
]
`;

exports[`getCardGeneratorDialogModel validate method getCardGeneratorDialogModel, card generation process is started from existing card 1`] = `
{
  "configuration": {
    "$data": {
      "IsActiveEntity": true,
      "Language": "1",
      "SalesOrder": undefined,
      "_BillingCompanyCode": {
        "Status": "O",
        "Status_Text": "Open",
      },
      "net_amount": "1570.00",
      "node_key": "12345",
      "tax_amount": "298.30",
      "to_BusinessPartner": {
        "CompanyName": "SAP",
        "CurrencyCode": "EUR",
        "FaxNumber": "0622734004",
        "LegalForm": "SE",
        "PhoneNumber": "0622734567",
        "__metadata": {},
      },
      "to_Currency": {
        "Currency_Code": "USD",
        "Currency_Code_Text": "United States Dollar",
        "Decimals": 2,
        "__metadata": {},
      },
      "to_LifecycleStatus": {
        "Status": "N",
        "Status_Text": "New",
        "__metadata": {},
      },
    },
    "actions": {
      "actionExists": false,
      "addedActions": [],
      "annotationActions": [],
      "bODataV4": false,
      "isAddActionEnabled": true,
      "styles": [
        {
          "label": "Default",
          "labelWithValue": "Default",
          "name": "Default",
        },
        {
          "label": "Positive",
          "labelWithValue": "Positive",
          "name": "Positive",
        },
        {
          "label": "Negative",
          "labelWithValue": "Negative",
          "name": "Negative",
        },
      ],
    },
    "advancedFormattingOptions": {
      "propertyValueFormatters": [
        {
          "displayName": "",
          "formatterName": "format.unit",
          "parameters": [
            {
              "defaultValue": "",
              "displayName": "",
              "name": "type",
              "type": "string",
              "value": "\${bp_id}",
            },
            {
              "defaultValue": "",
              "displayName": "Options",
              "name": "options",
              "properties": [
                {
                  "defaultValue": 2,
                  "displayName": "Decimals",
                  "name": "decimals",
                  "type": "number",
                },
                {
                  "defaultSelectedKey": "short",
                  "displayName": "Style",
                  "name": "style",
                  "options": [
                    {
                      "name": "Short",
                      "value": "short",
                    },
                    {
                      "name": "Long",
                      "value": "long",
                    },
                  ],
                  "type": "enum",
                },
              ],
              "type": "object",
            },
          ],
          "property": "gross_amount",
          "type": "numeric",
          "visible": false,
        },
        {
          "displayName": "",
          "formatterName": "format.unit",
          "parameters": [
            {
              "defaultValue": "",
              "displayName": "",
              "name": "type",
              "type": "string",
              "value": "\${bp_id}",
            },
            {
              "defaultValue": "",
              "displayName": "Options",
              "name": "options",
              "properties": [
                {
                  "defaultValue": 2,
                  "displayName": "Decimals",
                  "name": "decimals",
                  "type": "number",
                },
                {
                  "defaultSelectedKey": "short",
                  "displayName": "Style",
                  "name": "style",
                  "options": [
                    {
                      "name": "Short",
                      "value": "short",
                    },
                    {
                      "name": "Long",
                      "value": "long",
                    },
                  ],
                  "type": "enum",
                },
              ],
              "type": "object",
            },
          ],
          "property": "sp_id",
          "type": "numeric",
          "visible": false,
        },
        {
          "displayName": "Date/Time",
          "formatterName": "format.dateTime",
          "parameters": [
            {
              "defaultValue": "",
              "displayName": "Options",
              "name": "options",
              "properties": [
                {
                  "defaultValue": false,
                  "displayName": "Relative",
                  "name": "relative",
                  "type": "boolean",
                },
                {
                  "defaultValue": false,
                  "displayName": "UTC",
                  "name": "UTC",
                  "selected": true,
                  "type": "boolean",
                },
              ],
              "type": "object",
            },
          ],
          "property": "to_BusinessPartner/CreatedAt",
          "type": "Date",
          "visible": true,
        },
        {
          "displayName": "Date/Time",
          "formatterName": "format.dateTime",
          "parameters": [
            {
              "defaultValue": "",
              "displayName": "Options",
              "name": "options",
              "properties": [
                {
                  "defaultValue": false,
                  "displayName": "Relative",
                  "name": "relative",
                  "type": "boolean",
                },
                {
                  "defaultValue": false,
                  "displayName": "UTC",
                  "name": "UTC",
                  "selected": true,
                  "type": "boolean",
                },
              ],
              "type": "object",
            },
          ],
          "property": "to_BusinessPartner/ChangedAt",
          "type": "Date",
          "visible": true,
        },
      ],
      "selectedKeyCriticality": "",
      "sourceCriticalityProperty": [],
      "sourceUoMProperty": "SalesOrder",
      "targetFormatterProperty": "",
      "textArrangementSourceProperty": "SalesOrder",
      "textArrangements": [
        {
          "arrangementType": "TextFirst",
          "isNavigationForDescription": true,
          "name": "SalesOrder",
          "navKey": "Country",
          "navigationalProperties": [],
          "navigationalPropertiesForDescription": [
            {
              "label": "Lower Value",
              "labelWithValue": "Lower Value (O)",
              "name": "Status",
              "type": "Edm.String",
            },
            {
              "label": "Confirmation",
              "labelWithValue": "Confirmation (Open)",
              "name": "Status_Text",
              "type": "Edm.String",
            },
          ],
          "propertyKeyForDescription": "_BillingCompanyCode",
          "propertyKeyForId": "SalesOrder",
          "textArrangement": "TextFirst",
          "value": "_BillingCompanyCode/Country",
        },
        {
          "arrangementType": "TextLast",
          "isNavigationForDescription": false,
          "isNavigationForId": false,
          "name": "tax_amount",
          "navigationKeyForDescription": "",
          "navigationKeyForId": "",
          "navigationalPropertiesForDescription": [],
          "navigationalPropertiesForId": [],
          "propertyKeyForDescription": "Language",
          "propertyKeyForId": "tax_amount",
          "textArrangement": "TextLast",
          "value": "Language",
        },
        {
          "arrangementType": "TextLast",
          "isNavigationForDescription": true,
          "isNavigationForId": true,
          "name": "to_BusinessPartner/CompanyName",
          "navigationKeyForDescription": "LegalForm",
          "navigationKeyForId": "CompanyName",
          "navigationalPropertiesForDescription": [
            {
              "label": "Business Partner ID",
              "labelWithValue": "Business Partner ID (<empty>)",
              "name": "BusinessPartnerID",
              "type": "Edm.String",
            },
            {
              "label": "Bus. Part. Role",
              "labelWithValue": "Bus. Part. Role (<empty>)",
              "name": "BusinessPartnerRole",
              "type": "Edm.String",
            },
            {
              "label": "Email",
              "labelWithValue": "Email (<empty>)",
              "name": "MailAddress",
              "type": "Edm.String",
            },
            {
              "label": "Phone",
              "labelWithValue": "Phone (0622734567)",
              "name": "PhoneNumber",
              "type": "Edm.String",
            },
            {
              "label": "Fax",
              "labelWithValue": "Fax (0622734004)",
              "name": "FaxNumber",
              "type": "Edm.String",
            },
            {
              "label": "Legal Form",
              "labelWithValue": "Legal Form (SE)",
              "name": "LegalForm",
              "type": "Edm.String",
            },
            {
              "label": "Currency Code",
              "labelWithValue": "Currency Code (EUR)",
              "name": "CurrencyCode",
              "type": "Edm.String",
            },
            {
              "label": "Company",
              "labelWithValue": "Company (SAP)",
              "name": "CompanyName",
              "type": "Edm.String",
            },
            {
              "label": "Created At",
              "labelWithValue": "Created At (<empty>)",
              "name": "CreatedAt",
              "type": "Edm.DateTimeOffset",
            },
            {
              "label": "Created By",
              "labelWithValue": "Created By (<empty>)",
              "name": "CreatedBy",
              "type": "Edm.String",
            },
            {
              "label": "Changed At",
              "labelWithValue": "Changed At (<empty>)",
              "name": "ChangedAt",
              "type": "Edm.DateTimeOffset",
            },
            {
              "label": "Changed By",
              "labelWithValue": "Changed By (<empty>)",
              "name": "ChangedBy",
              "type": "Edm.String",
            },
          ],
          "navigationalPropertiesForId": [
            {
              "label": "Business Partner ID",
              "labelWithValue": "Business Partner ID (<empty>)",
              "name": "BusinessPartnerID",
              "type": "Edm.String",
            },
            {
              "label": "Bus. Part. Role",
              "labelWithValue": "Bus. Part. Role (<empty>)",
              "name": "BusinessPartnerRole",
              "type": "Edm.String",
            },
            {
              "label": "Email",
              "labelWithValue": "Email (<empty>)",
              "name": "MailAddress",
              "type": "Edm.String",
            },
            {
              "label": "Phone",
              "labelWithValue": "Phone (0622734567)",
              "name": "PhoneNumber",
              "type": "Edm.String",
            },
            {
              "label": "Fax",
              "labelWithValue": "Fax (0622734004)",
              "name": "FaxNumber",
              "type": "Edm.String",
            },
            {
              "label": "Legal Form",
              "labelWithValue": "Legal Form (SE)",
              "name": "LegalForm",
              "type": "Edm.String",
            },
            {
              "label": "Currency Code",
              "labelWithValue": "Currency Code (EUR)",
              "name": "CurrencyCode",
              "type": "Edm.String",
            },
            {
              "label": "Company",
              "labelWithValue": "Company (SAP)",
              "name": "CompanyName",
              "type": "Edm.String",
            },
            {
              "label": "Created At",
              "labelWithValue": "Created At (<empty>)",
              "name": "CreatedAt",
              "type": "Edm.DateTimeOffset",
            },
            {
              "label": "Created By",
              "labelWithValue": "Created By (<empty>)",
              "name": "CreatedBy",
              "type": "Edm.String",
            },
            {
              "label": "Changed At",
              "labelWithValue": "Changed At (<empty>)",
              "name": "ChangedAt",
              "type": "Edm.DateTimeOffset",
            },
            {
              "label": "Changed By",
              "labelWithValue": "Changed By (<empty>)",
              "name": "ChangedBy",
              "type": "Edm.String",
            },
          ],
          "propertyKeyForDescription": "to_BusinessPartner",
          "propertyKeyForId": "to_BusinessPartner",
          "textArrangement": "TextLast",
          "value": "to_BusinessPartner/LegalForm",
        },
        {
          "arrangementType": "TextFirst",
          "isNavigationForDescription": true,
          "isNavigationForId": true,
          "name": "to_Currency/Currency_Code_Text",
          "navigationKeyForDescription": "PhoneNumber",
          "navigationKeyForId": "Currency_Code_Text",
          "navigationalPropertiesForDescription": [
            {
              "label": "Business Partner ID",
              "labelWithValue": "Business Partner ID (<empty>)",
              "name": "BusinessPartnerID",
              "type": "Edm.String",
            },
            {
              "label": "Bus. Part. Role",
              "labelWithValue": "Bus. Part. Role (<empty>)",
              "name": "BusinessPartnerRole",
              "type": "Edm.String",
            },
            {
              "label": "Email",
              "labelWithValue": "Email (<empty>)",
              "name": "MailAddress",
              "type": "Edm.String",
            },
            {
              "label": "Phone",
              "labelWithValue": "Phone (0622734567)",
              "name": "PhoneNumber",
              "type": "Edm.String",
            },
            {
              "label": "Fax",
              "labelWithValue": "Fax (0622734004)",
              "name": "FaxNumber",
              "type": "Edm.String",
            },
            {
              "label": "Legal Form",
              "labelWithValue": "Legal Form (SE)",
              "name": "LegalForm",
              "type": "Edm.String",
            },
            {
              "label": "Currency Code",
              "labelWithValue": "Currency Code (EUR)",
              "name": "CurrencyCode",
              "type": "Edm.String",
            },
            {
              "label": "Company",
              "labelWithValue": "Company (SAP)",
              "name": "CompanyName",
              "type": "Edm.String",
            },
            {
              "label": "Created At",
              "labelWithValue": "Created At (<empty>)",
              "name": "CreatedAt",
              "type": "Edm.DateTimeOffset",
            },
            {
              "label": "Created By",
              "labelWithValue": "Created By (<empty>)",
              "name": "CreatedBy",
              "type": "Edm.String",
            },
            {
              "label": "Changed At",
              "labelWithValue": "Changed At (<empty>)",
              "name": "ChangedAt",
              "type": "Edm.DateTimeOffset",
            },
            {
              "label": "Changed By",
              "labelWithValue": "Changed By (<empty>)",
              "name": "ChangedBy",
              "type": "Edm.String",
            },
          ],
          "navigationalPropertiesForId": [
            {
              "label": "Currency Code",
              "labelWithValue": "Currency Code (USD)",
              "name": "Currency_Code",
              "type": "Edm.String",
            },
            {
              "label": "Currency Code Text",
              "labelWithValue": "Currency Code Text (United States Dollar)",
              "name": "Currency_Code_Text",
              "type": "Edm.String",
            },
          ],
          "propertyKeyForDescription": "to_BusinessPartner",
          "propertyKeyForId": "to_Currency",
          "textArrangement": "TextFirst",
          "value": "to_BusinessPartner/PhoneNumber",
        },
        {
          "arrangementType": "TextFirst",
          "isNavigationForDescription": true,
          "isNavigationForId": false,
          "name": "net_amount",
          "navigationKeyForDescription": "Status",
          "navigationKeyForId": "",
          "navigationalPropertiesForDescription": [
            {
              "label": "Lower Value",
              "labelWithValue": "Lower Value (N)",
              "name": "Status",
              "type": "Edm.String",
            },
            {
              "label": "Lifecycle Status",
              "labelWithValue": "Lifecycle Status (New)",
              "name": "Status_Text",
              "type": "Edm.String",
            },
          ],
          "navigationalPropertiesForId": [],
          "propertyKeyForDescription": "to_LifecycleStatus",
          "propertyKeyForId": "net_amount",
          "textArrangement": "TextFirst",
          "value": "to_LifecycleStatus/Status",
        },
        {
          "arrangementType": "TextFirst",
          "isNavigationForDescription": true,
          "isNavigationForId": true,
          "name": "to_LifecycleStatus/Status_Text",
          "navigationKeyForDescription": "Status",
          "navigationKeyForId": "Status_Text",
          "navigationalPropertiesForDescription": [
            {
              "label": "Lower Value",
              "labelWithValue": "Lower Value (N)",
              "name": "Status",
              "type": "Edm.String",
            },
            {
              "label": "Lifecycle Status",
              "labelWithValue": "Lifecycle Status (New)",
              "name": "Status_Text",
              "type": "Edm.String",
            },
          ],
          "navigationalPropertiesForId": [
            {
              "label": "Lower Value",
              "labelWithValue": "Lower Value (N)",
              "name": "Status",
              "type": "Edm.String",
            },
            {
              "label": "Lifecycle Status",
              "labelWithValue": "Lifecycle Status (New)",
              "name": "Status_Text",
              "type": "Edm.String",
            },
          ],
          "propertyKeyForDescription": "to_LifecycleStatus",
          "propertyKeyForId": "to_LifecycleStatus",
          "textArrangement": "TextFirst",
          "value": "to_LifecycleStatus/Status",
        },
      ],
      "unitOfMeasures": [
        {
          "name": "tax_amount",
          "propertyKeyForDescription": "currency_code",
          "propertyKeyForId": "tax_amount",
          "value": "currency_code",
        },
        {
          "name": "net_amount",
          "propertyKeyForDescription": "currency_code",
          "propertyKeyForId": "net_amount",
          "value": "currency_code",
        },
        {
          "name": "gross_amount",
          "propertyKeyForDescription": "bp_id",
          "propertyKeyForId": "gross_amount",
          "value": "bp_id",
        },
        {
          "name": "sp_id",
          "propertyKeyForDescription": "bp_id",
          "propertyKeyForId": "sp_id",
          "value": "bp_id",
        },
      ],
    },
    "appIntent": "test-intent",
    "deviationUnit": [
      {
        "Name": "K",
        "Value": "K",
      },
      {
        "Name": "%",
        "Value": "%",
      },
    ],
    "entitySet": "testEntity",
    "errorControls": [],
    "groupLimitReached": false,
    "groups": [
      {
        "items": [
          {
            "isEnabled": true,
            "isNavigationEnabled": true,
            "label": "Company",
            "name": "_BillingCompanyCode",
            "navigationProperty": "Company",
            "navigationalProperties": [
              {
                "label": "Lower Value",
                "labelWithValue": "Lower Value (O)",
                "name": "Status",
                "type": "Edm.String",
              },
              {
                "label": "Confirmation",
                "labelWithValue": "Confirmation (Open)",
                "name": "Status_Text",
                "type": "Edm.String",
              },
            ],
            "value": "{_BillingCompanyCode/Company}",
          },
          {
            "isEnabled": true,
            "isNavigationEnabled": true,
            "label": "Net Amount",
            "name": "to_BusinessPartner",
            "navigationProperty": "CreatedAt",
            "navigationalProperties": [
              {
                "label": "Business Partner ID",
                "labelWithValue": "Business Partner ID (<empty>)",
                "name": "BusinessPartnerID",
                "type": "Edm.String",
              },
              {
                "label": "Bus. Part. Role",
                "labelWithValue": "Bus. Part. Role (<empty>)",
                "name": "BusinessPartnerRole",
                "type": "Edm.String",
              },
              {
                "label": "Email",
                "labelWithValue": "Email (<empty>)",
                "name": "MailAddress",
                "type": "Edm.String",
              },
              {
                "label": "Phone",
                "labelWithValue": "Phone (0622734567)",
                "name": "PhoneNumber",
                "type": "Edm.String",
              },
              {
                "label": "Fax",
                "labelWithValue": "Fax (0622734004)",
                "name": "FaxNumber",
                "type": "Edm.String",
              },
              {
                "label": "Legal Form",
                "labelWithValue": "Legal Form (SE)",
                "name": "LegalForm",
                "type": "Edm.String",
              },
              {
                "label": "Currency Code",
                "labelWithValue": "Currency Code (EUR)",
                "name": "CurrencyCode",
                "type": "Edm.String",
              },
              {
                "label": "Company",
                "labelWithValue": "Company (SAP)",
                "name": "CompanyName",
                "type": "Edm.String",
              },
              {
                "label": "Created At",
                "labelWithValue": "Created At (<empty>)",
                "name": "CreatedAt",
                "type": "Edm.DateTimeOffset",
              },
              {
                "label": "Created By",
                "labelWithValue": "Created By (<empty>)",
                "name": "CreatedBy",
                "type": "Edm.String",
              },
              {
                "label": "Changed At",
                "labelWithValue": "Changed At (<empty>)",
                "name": "ChangedAt",
                "type": "Edm.DateTimeOffset",
              },
              {
                "label": "Changed By",
                "labelWithValue": "Changed By (<empty>)",
                "name": "ChangedBy",
                "type": "Edm.String",
              },
            ],
            "value": "{= format.dateTime(\${to_BusinessPartner/CreatedAt}, {"relative":false,"UTC":true})}",
          },
          {
            "isEnabled": true,
            "isNavigationEnabled": false,
            "label": "Division",
            "name": "OrganizationDivision",
            "value": "{OrganizationDivision}",
          },
        ],
        "title": "Group 1",
      },
    ],
    "headerUOM": "",
    "indicatorsValue": {
      "deviationUnit": "%",
      "deviationValue": "22",
      "targetUnit": "%",
      "targetValue": "11",
    },
    "isEdited": false,
    "keyParameters": [
      {
        "formattedValue": "12345",
        "key": "node_key",
      },
      {
        "formattedValue": "true",
        "key": "IsActiveEntity",
      },
    ],
    "mainIndicatorNavigationSelectedKey": "",
    "mainIndicatorNavigationSelectedValue": "",
    "mainIndicatorOptions": {
      "criticality": [],
    },
    "mainIndicatorStatusKey": "SalesOrder",
    "mainIndicatorStatusUnit": "",
    "navigationProperty": [
      {
        "name": "_BillingCompanyCode",
        "properties": [
          {
            "label": "Lower Value",
            "labelWithValue": "Lower Value (O)",
            "name": "Status",
            "type": "Edm.String",
          },
          {
            "label": "Confirmation",
            "labelWithValue": "Confirmation (Open)",
            "name": "Status_Text",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_Currency",
        "properties": [
          {
            "label": "Currency Code",
            "labelWithValue": "Currency Code (USD)",
            "name": "Currency_Code",
            "type": "Edm.String",
          },
          {
            "label": "Currency Code Text",
            "labelWithValue": "Currency Code Text (United States Dollar)",
            "name": "Currency_Code_Text",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_BillingStatus",
        "properties": [
          {
            "label": "Lower Value",
            "name": "Status",
            "type": "Edm.String",
          },
          {
            "label": "Confirmation",
            "name": "Status_Text",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_BusinessPartner",
        "properties": [
          {
            "label": "Business Partner ID",
            "labelWithValue": "Business Partner ID (<empty>)",
            "name": "BusinessPartnerID",
            "type": "Edm.String",
          },
          {
            "label": "Bus. Part. Role",
            "labelWithValue": "Bus. Part. Role (<empty>)",
            "name": "BusinessPartnerRole",
            "type": "Edm.String",
          },
          {
            "label": "Email",
            "labelWithValue": "Email (<empty>)",
            "name": "MailAddress",
            "type": "Edm.String",
          },
          {
            "label": "Phone",
            "labelWithValue": "Phone (0622734567)",
            "name": "PhoneNumber",
            "type": "Edm.String",
          },
          {
            "label": "Fax",
            "labelWithValue": "Fax (0622734004)",
            "name": "FaxNumber",
            "type": "Edm.String",
          },
          {
            "label": "Legal Form",
            "labelWithValue": "Legal Form (SE)",
            "name": "LegalForm",
            "type": "Edm.String",
          },
          {
            "label": "Currency Code",
            "labelWithValue": "Currency Code (EUR)",
            "name": "CurrencyCode",
            "type": "Edm.String",
          },
          {
            "label": "Company",
            "labelWithValue": "Company (SAP)",
            "name": "CompanyName",
            "type": "Edm.String",
          },
          {
            "label": "Created At",
            "labelWithValue": "Created At (<empty>)",
            "name": "CreatedAt",
            "type": "Edm.DateTimeOffset",
          },
          {
            "label": "Created By",
            "labelWithValue": "Created By (<empty>)",
            "name": "CreatedBy",
            "type": "Edm.String",
          },
          {
            "label": "Changed At",
            "labelWithValue": "Changed At (<empty>)",
            "name": "ChangedAt",
            "type": "Edm.DateTimeOffset",
          },
          {
            "label": "Changed By",
            "labelWithValue": "Changed By (<empty>)",
            "name": "ChangedBy",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_LifecycleStatus",
        "properties": [
          {
            "label": "Lower Value",
            "labelWithValue": "Lower Value (N)",
            "name": "Status",
            "type": "Edm.String",
          },
          {
            "label": "Lifecycle Status",
            "labelWithValue": "Lifecycle Status (New)",
            "name": "Status_Text",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_DeliveryStatus",
        "properties": [
          {
            "label": "Lower Value",
            "name": "Status",
            "type": "Edm.String",
          },
          {
            "label": "Delivery Status",
            "name": "Status_Text",
            "type": "Edm.String",
          },
        ],
      },
    ],
    "navigationValue": "SalesOrder",
    "oDataV4": false,
    "properties": [
      {
        "UOM": "",
        "isDate": false,
        "label": "node_key",
        "labelWithValue": "node_key (12345)",
        "name": "node_key",
        "type": "Edm.Guid",
        "value": "12345",
      },
      {
        "UOM": "",
        "isDate": false,
        "label": "IsActiveEntity",
        "labelWithValue": "IsActiveEntity (Yes)",
        "name": "IsActiveEntity",
        "type": "Edm.Boolean",
        "value": true,
      },
      {
        "UOM": "currency_code",
        "isDate": false,
        "kind": "Property",
        "label": "Tax Amount",
        "labelWithValue": "Tax Amount (298.30)",
        "name": "tax_amount",
        "type": "Edm.Decimal",
        "value": "298.30",
      },
      {
        "UOM": "",
        "isDate": false,
        "kind": "Property",
        "label": "Language",
        "labelWithValue": "Language (1)",
        "name": "Language",
        "type": "Edm.String",
        "value": "1",
      },
      {
        "UOM": "currency_code",
        "isDate": false,
        "kind": "Property",
        "label": "Net Amount",
        "labelWithValue": "Net Amount (1570.00)",
        "name": "net_amount",
        "type": "Edm.Decimal",
        "value": "1570.00",
      },
    ],
    "propertiesWithNavigation": [
      {
        "UOM": "",
        "isDate": false,
        "label": "node_key",
        "labelWithValue": "node_key (12345)",
        "name": "node_key",
        "type": "Edm.Guid",
        "value": "12345",
      },
      {
        "UOM": "",
        "isDate": false,
        "label": "IsActiveEntity",
        "labelWithValue": "IsActiveEntity (Yes)",
        "name": "IsActiveEntity",
        "type": "Edm.Boolean",
        "value": true,
      },
      {
        "UOM": "currency_code",
        "isDate": false,
        "kind": "Property",
        "label": "Tax Amount",
        "labelWithValue": "Tax Amount (298.30)",
        "name": "tax_amount",
        "type": "Edm.Decimal",
        "value": "298.30",
      },
      {
        "UOM": "",
        "isDate": false,
        "kind": "Property",
        "label": "Language",
        "labelWithValue": "Language (1)",
        "name": "Language",
        "type": "Edm.String",
        "value": "1",
      },
      {
        "UOM": "currency_code",
        "isDate": false,
        "kind": "Property",
        "label": "Net Amount",
        "labelWithValue": "Net Amount (1570.00)",
        "name": "net_amount",
        "type": "Edm.Decimal",
        "value": "1570.00",
      },
    ],
    "selectedContentNavigation": [],
    "selectedHeaderNavigation": [],
    "selectedIndicatorOptions": [
      {
        "deviationUnit": "%",
        "deviationValue": "22",
        "targetUnit": "%",
        "targetValue": "11",
      },
    ],
    "selectedNavigationPropertyHeader": {
      "name": "SalesOrder",
      "value": [],
    },
    "selectedNavigationalProperties": [
      {
        "name": "SalesOrder",
        "value": [],
      },
    ],
    "selectedTrendOptions": [
      {
        "downDifference": "11",
        "referenceValue": "33",
        "upDifference": "22",
      },
    ],
    "serviceUrl": "/sap/opu/odata",
    "subtitle": "Manage Sales Orders - Version 2",
    "targetUnit": [
      {
        "Name": "K",
        "Value": "K",
      },
      {
        "Name": "%",
        "Value": "%",
      },
    ],
    "title": "Manage Sales Orders - Version 2",
    "trendOptions": {
      "downDifference": "11",
      "referenceValue": "33",
      "upDifference": "22",
    },
  },
  "title": "Entity Set Name",
}
`;

exports[`getCardGeneratorDialogModel validate method getCardGeneratorDialogModel, card generation process is started from scratch 1`] = `
{
  "configuration": {
    "$data": {
      "IsActiveEntity": true,
      "Language": "1",
      "net_amount": "1570.00",
      "node_key": "12345",
      "tax_amount": "298.30",
    },
    "actions": {
      "actionExists": false,
      "addedActions": [],
      "annotationActions": [],
      "bODataV4": false,
      "isAddActionEnabled": true,
      "styles": [
        {
          "label": "Default",
          "labelWithValue": "Default",
          "name": "Default",
        },
        {
          "label": "Positive",
          "labelWithValue": "Positive",
          "name": "Positive",
        },
        {
          "label": "Negative",
          "labelWithValue": "Negative",
          "name": "Negative",
        },
      ],
    },
    "advancedFormattingOptions": {
      "propertyValueFormatters": [
        {
          "displayName": "Date/Time",
          "formatterName": "format.dateTime",
          "parameters": [
            {
              "defaultValue": "",
              "displayName": "Options",
              "name": "options",
              "properties": [
                {
                  "defaultValue": false,
                  "displayName": "Relative",
                  "name": "relative",
                  "type": "boolean",
                },
                {
                  "defaultValue": false,
                  "displayName": "UTC",
                  "name": "UTC",
                  "selected": true,
                  "type": "boolean",
                },
              ],
              "type": "object",
            },
          ],
          "property": "to_BusinessPartner/CreatedAt",
          "type": "Date",
          "visible": true,
        },
        {
          "displayName": "Date/Time",
          "formatterName": "format.dateTime",
          "parameters": [
            {
              "defaultValue": "",
              "displayName": "Options",
              "name": "options",
              "properties": [
                {
                  "defaultValue": false,
                  "displayName": "Relative",
                  "name": "relative",
                  "type": "boolean",
                },
                {
                  "defaultValue": false,
                  "displayName": "UTC",
                  "name": "UTC",
                  "selected": true,
                  "type": "boolean",
                },
              ],
              "type": "object",
            },
          ],
          "property": "to_BusinessPartner/ChangedAt",
          "type": "Date",
          "visible": true,
        },
      ],
      "selectedKeyCriticality": "",
      "sourceCriticalityProperty": [],
      "sourceUoMProperty": "",
      "targetFormatterProperty": "",
      "textArrangementSourceProperty": "",
      "textArrangements": [],
      "unitOfMeasures": [
        {
          "name": "tax_amount",
          "propertyKeyForDescription": "currency_code",
          "propertyKeyForId": "tax_amount",
          "value": "currency_code",
          "valueState": "None",
          "valueStateText": "",
        },
        {
          "name": "net_amount",
          "propertyKeyForDescription": "currency_code",
          "propertyKeyForId": "net_amount",
          "value": "currency_code",
          "valueState": "None",
          "valueStateText": "",
        },
      ],
    },
    "appIntent": "test-intent",
    "deviationUnit": [
      {
        "Name": "K",
        "Value": "K",
      },
      {
        "Name": "%",
        "Value": "%",
      },
    ],
    "entitySet": "testEntity",
    "errorControls": [],
    "groupLimitReached": false,
    "groups": [
      {
        "items": [
          {
            "isEnabled": false,
            "isNavigationEnabled": false,
            "label": "",
            "name": "",
            "navigationProperty": "",
            "value": "",
          },
        ],
        "title": "Group 1",
      },
    ],
    "headerUOM": "",
    "indicatorsValue": undefined,
    "isEdited": false,
    "keyParameters": [
      {
        "formattedValue": "12345",
        "key": "node_key",
      },
      {
        "formattedValue": "true",
        "key": "IsActiveEntity",
      },
    ],
    "mainIndicatorNavigationSelectedKey": "",
    "mainIndicatorNavigationSelectedValue": "",
    "mainIndicatorOptions": {
      "criticality": [],
    },
    "mainIndicatorStatusKey": "",
    "mainIndicatorStatusUnit": "",
    "navigationProperty": [
      {
        "name": "_BillingCompanyCode",
        "properties": [
          {
            "label": "Lower Value",
            "labelWithValue": "Lower Value (O)",
            "name": "Status",
            "type": "Edm.String",
          },
          {
            "label": "Confirmation",
            "labelWithValue": "Confirmation (Open)",
            "name": "Status_Text",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_Currency",
        "properties": [
          {
            "label": "Currency Code",
            "name": "Currency_Code",
            "type": "Edm.String",
          },
          {
            "label": "Currency Code Text",
            "name": "Currency_Code_Text",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_BillingStatus",
        "properties": [
          {
            "label": "Lower Value",
            "name": "Status",
            "type": "Edm.String",
          },
          {
            "label": "Confirmation",
            "name": "Status_Text",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_BusinessPartner",
        "properties": [
          {
            "label": "Business Partner ID",
            "name": "BusinessPartnerID",
            "type": "Edm.String",
          },
          {
            "label": "Bus. Part. Role",
            "name": "BusinessPartnerRole",
            "type": "Edm.String",
          },
          {
            "label": "Email",
            "name": "MailAddress",
            "type": "Edm.String",
          },
          {
            "label": "Phone",
            "name": "PhoneNumber",
            "type": "Edm.String",
          },
          {
            "label": "Fax",
            "name": "FaxNumber",
            "type": "Edm.String",
          },
          {
            "label": "Legal Form",
            "name": "LegalForm",
            "type": "Edm.String",
          },
          {
            "label": "Currency Code",
            "name": "CurrencyCode",
            "type": "Edm.String",
          },
          {
            "label": "Company",
            "name": "CompanyName",
            "type": "Edm.String",
          },
          {
            "label": "Created At",
            "name": "CreatedAt",
            "type": "Edm.DateTimeOffset",
          },
          {
            "label": "Created By",
            "name": "CreatedBy",
            "type": "Edm.String",
          },
          {
            "label": "Changed At",
            "name": "ChangedAt",
            "type": "Edm.DateTimeOffset",
          },
          {
            "label": "Changed By",
            "name": "ChangedBy",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_LifecycleStatus",
        "properties": [
          {
            "label": "Lower Value",
            "name": "Status",
            "type": "Edm.String",
          },
          {
            "label": "Lifecycle Status",
            "name": "Status_Text",
            "type": "Edm.String",
          },
        ],
      },
      {
        "name": "to_DeliveryStatus",
        "properties": [
          {
            "label": "Lower Value",
            "name": "Status",
            "type": "Edm.String",
          },
          {
            "label": "Delivery Status",
            "name": "Status_Text",
            "type": "Edm.String",
          },
        ],
      },
    ],
    "navigationValue": "",
    "oDataV4": false,
    "properties": [
      {
        "UOM": "",
        "isDate": false,
        "label": "node_key",
        "labelWithValue": "node_key (12345)",
        "name": "node_key",
        "type": "Edm.Guid",
        "value": "12345",
      },
      {
        "UOM": "",
        "isDate": false,
        "label": "IsActiveEntity",
        "labelWithValue": "IsActiveEntity (Yes)",
        "name": "IsActiveEntity",
        "type": "Edm.Boolean",
        "value": true,
      },
      {
        "UOM": "currency_code",
        "isDate": false,
        "kind": "Property",
        "label": "Tax Amount",
        "labelWithValue": "Tax Amount (298.30)",
        "name": "tax_amount",
        "type": "Edm.Decimal",
        "value": "298.30",
      },
      {
        "UOM": "",
        "isDate": false,
        "kind": "Property",
        "label": "Language",
        "labelWithValue": "Language (1)",
        "name": "Language",
        "type": "Edm.String",
        "value": "1",
      },
      {
        "UOM": "currency_code",
        "isDate": false,
        "kind": "Property",
        "label": "Net Amount",
        "labelWithValue": "Net Amount (1570.00)",
        "name": "net_amount",
        "type": "Edm.Decimal",
        "value": "1570.00",
      },
    ],
    "propertiesWithNavigation": [
      {
        "UOM": "",
        "isDate": false,
        "label": "node_key",
        "labelWithValue": "node_key (12345)",
        "name": "node_key",
        "type": "Edm.Guid",
        "value": "12345",
      },
      {
        "UOM": "",
        "isDate": false,
        "label": "IsActiveEntity",
        "labelWithValue": "IsActiveEntity (Yes)",
        "name": "IsActiveEntity",
        "type": "Edm.Boolean",
        "value": true,
      },
      {
        "UOM": "currency_code",
        "isDate": false,
        "kind": "Property",
        "label": "Tax Amount",
        "labelWithValue": "Tax Amount (298.30)",
        "name": "tax_amount",
        "type": "Edm.Decimal",
        "value": "298.30",
      },
      {
        "UOM": "",
        "isDate": false,
        "kind": "Property",
        "label": "Language",
        "labelWithValue": "Language (1)",
        "name": "Language",
        "type": "Edm.String",
        "value": "1",
      },
      {
        "UOM": "currency_code",
        "isDate": false,
        "kind": "Property",
        "label": "Net Amount",
        "labelWithValue": "Net Amount (1570.00)",
        "name": "net_amount",
        "type": "Edm.Decimal",
        "value": "1570.00",
      },
    ],
    "selectedContentNavigation": [],
    "selectedHeaderNavigation": [],
    "selectedIndicatorOptions": [],
    "selectedNavigationPropertyHeader": {
      "name": "",
      "value": [],
    },
    "selectedNavigationalProperties": [],
    "selectedTrendOptions": [],
    "serviceUrl": "/sap/opu/odata",
    "subtitle": "Test Application Description",
    "targetUnit": [
      {
        "Name": "K",
        "Value": "K",
      },
      {
        "Name": "%",
        "Value": "%",
      },
    ],
    "title": "Test Application",
    "trendOptions": undefined,
  },
  "title": "Entity Set Name",
}
`;

exports[`validate method _mergePropertyFormatters 1`] = `
[
  {
    "displayName": "Float (format.float)",
    "formatterName": "format.float",
    "parameters": [
      {
        "defaultValue": "",
        "displayName": "Options",
        "name": "options",
        "properties": [
          {
            "defaultValue": 2,
            "displayName": "Decimals",
            "name": "decimals",
            "type": "number",
            "value": 2,
          },
          {
            "defaultSelectedKey": "short",
            "displayName": "Style",
            "name": "style",
            "options": [
              {
                "name": "Short",
                "value": "short",
              },
              {
                "name": "Long",
                "value": "long",
              },
            ],
            "selectedKey": "short",
            "type": "enum",
            "value": "short",
          },
        ],
        "type": "object",
      },
    ],
    "property": "net_amount",
    "type": "numeric",
    "visible": true,
  },
  {
    "displayName": "Format Criticality State or Value",
    "formatterName": "extension.formatters.formatCriticality",
    "parameters": [
      {
        "defaultValue": "",
        "displayName": "Criticality States",
        "name": "sType",
        "type": "string",
      },
    ],
    "property": "Language",
    "type": "string | numeric",
    "visible": false,
  },
  {
    "displayName": "Date Time (format.dateTime)",
    "formatterName": "format.dateTime",
    "parameters": [
      {
        "defaultValue": "",
        "displayName": "Options",
        "name": "options",
        "properties": [
          {
            "defaultValue": false,
            "displayName": "Relative",
            "name": "relative",
            "selected": {
              "UTC": true,
              "relative": false,
            },
            "type": "boolean",
          },
          {
            "defaultValue": false,
            "displayName": "UTC",
            "name": "UTC",
            "selected": {
              "UTC": true,
              "relative": false,
            },
            "type": "boolean",
          },
        ],
        "type": "object",
      },
    ],
    "property": "created_at",
    "type": "Date",
    "visible": true,
  },
  {
    "displayName": "Date Time (format.dateTime)",
    "formatterName": "format.dateTime",
    "parameters": [
      {
        "defaultValue": "",
        "displayName": "Options",
        "name": "options",
        "properties": [
          {
            "defaultValue": false,
            "displayName": "Relative",
            "name": "relative",
            "type": "boolean",
          },
          {
            "defaultValue": false,
            "displayName": "UTC",
            "name": "UTC",
            "selected": true,
            "type": "boolean",
          },
        ],
        "type": "object",
      },
    ],
    "property": "DraftEntityLastChangeDateTime",
    "type": "Date",
    "visible": true,
  },
]
`;
